fixed alignment.

--- a/remixshare/flg-five.css
+++ b/remixshare/flg-five.css
@@ -3,7 +3,7 @@
 #flg-container {
 	text-align: center;
 	margin: 0 auto;
-	width: 740px;
+	width: 100%;
 	position: relative;
 	top: 0; left: 0;
     /* border: 1px solid black; */
@@ -19,10 +19,8 @@ h4.conditions {
 }
 
 #flg-ui {
-	position: relative;
-	top: 0; left: 0;
-	width: 605px;
-	padding: 20px;
+	width: 585px;
+	padding: 20px 0;
 	margin: 0 auto;
 	
 	border-top: 2px solid #CADB2A;
@@ -73,26 +71,26 @@ h4.conditions {
 
 #flg-connect-share {
 	float: left;
-	margin-left:  22px;
+	margin-left:  12px;
 }
 
 #flg-connect-remix {
 	float: right;
 	margin-top:  -69px;
-	margin-right:  -1px;
+	margin-right:  9px;
 }
 
 #flg-connect-nc {
 	clear: both;
 	margin-top: -94px;
-	margin-left:  22px;
+	margin-left:  12px;
 	float: left;
 }
 
 #flg-connect-sa {
 	clear: both;
 	margin-top: -95px;
-	margin-right: 0px;
+	margin-right: 10px;
 	float: right;
 }
 
